maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Escaper:6: warning: enclosing method toucheMur has result type Unit: return value discarded
      return true
      ^Escaper:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Escaper:8: warning: enclosing method toucheMur has result type Unit: return value discarded
    return false
    ^Escaper:13: error: value && is not a member of Unit
      if ((toucheMur())&&(!estFaceMur)){
                       ^Escaper:15: error: value && is not a member of Unit
      } else if (toucheMur()&&(estFaceMur())){
                            ^